--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
   }
   
   .current-temperature-value {
-    font-size: 80px;
+    font-size: 75px;
     font-weight: bold;
   }
   
@@ -96,4 +96,10 @@ body {
   
     color: rgba(39, 33, 66, 0.4);
   }
-  
+  #iconImage{
+    display:inline;
+    width: 100px;
+    height: 100px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
